--- a/Frontend/src/Stylesheets/HomePage.module.css
+++ b/Frontend/src/Stylesheets/HomePage.module.css
@@ -2,4 +2,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+}
+
+.btn {
+    border-radius: 5px;
+    margin: 0px 10px;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    cursor: pointer;
 }
