--- a/Frontend/src/Stylesheets/ButtonComponent.module.css
+++ b/Frontend/src/Stylesheets/ButtonComponent.module.css
@@ -1,7 +1,8 @@
 .btn {
     padding: 10px;
     border-radius: 5px;
-    /* margin: 0px 10px; */
+    margin: 0px;
+    margin-right: 15px;
     border: none;
     box-shadow: 2px 2px 2px #2C333F;
     cursor: pointer;
