--- a/Frontend/src/Stylesheets/homesection2.module.css
+++ b/Frontend/src/Stylesheets/homesection2.module.css
@@ -1,10 +1,10 @@
 .container {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     margin: 4rem;
     /* border:2px solid red; */
-    width: 80vw;
+    width: 85vw;
     height: 45vh;
 }
 
@@ -12,14 +12,13 @@
     width: 40%;
     height: 40vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     flex-direction: column;
-    /* border:2px solid red; */
 }
 
 .title {
-    font-size: 25px;
+    font-size: 35px;
 }
 
 .para {
@@ -35,15 +34,71 @@
     justify-content: center;
     text-align: center;
     align-items: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 .codeblock {
-    width: 40%;
+    width:90%;
     height: 40vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    /* border:2px solid red; */
-    font-size: medium;
+    justify-content: flex-start; 
+    align-items: flex-start;   
+    font-size: 16px;
+    white-space: pre-wrap; 
+    font-family: 'Courier New', Courier, monospace; 
+    line-height: 1.5; 
+    margin: 0px;
+    background-color: transparent;
+    z-index: 10; 
+    overflow: visible;   
 }
+
+.codeContainer {
+    width: 38vw;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    /* border: 2px solid; */
+    padding: 10px;
+    padding-bottom: 0px;
+    box-sizing: border-box;
+    overflow: visible;
+    position: relative;
+    box-shadow: 2px 2px 8px #000826;
+    border: 2px solid #717171;
+}
+
+.numbers {
+    padding: 0px 13px;
+    margin: 0px;
+    height: 40vh;
+    display: flex;
+    justify-content: flex-start; 
+    align-items: center; 
+    flex-direction: column;
+    z-index: 10;
+}
+
+.numbers p {
+    font-family: 'Courier New', Courier, monospace; 
+    font-size: 16px;
+    margin: 0px;
+}
+
+.radial {
+    background: radial-gradient(circle at 30% 40%, rgba(134, 106, 4, 0.6) , #000826 70%);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1; 
+}
+
+
+
+
+
+
+
