Adding Timeline component in home

--- a/Frontend/src/Stylesheets/ButtonComponent.module.css
+++ b/Frontend/src/Stylesheets/ButtonComponent.module.css
@@ -6,6 +6,10 @@
     border: none;
     box-shadow: 2px 2px 2px #2C333F;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
 }
 
 .yellow-btn {
