--- a/Frontend/src/Stylesheets/Timeline.module.css
+++ b/Frontend/src/Stylesheets/Timeline.module.css
@@ -68,7 +68,7 @@
     align-items: center;
     position: relative;
     z-index: 10;
-}/* Ellipse 2 */
+}
 
 .img1 {
     z-index: 10;
@@ -89,4 +89,29 @@
     z-index: -1;
 }
 
+.greenBlock {
+    background-color: #014A32;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 450px;
+    height: 100px;
+    position: absolute;
+    bottom: -30px;
+    z-index: 10;
+    padding:1rem;
+    box-sizing: border-box;
+}
 
+.line {
+    width: 2px;
+    height: 50px;
+    background-color: black;
+    margin: 0px 1rem;
+}
+
+.greenBlock p {
+    font-size: 18px;
+    padding: 2px;
+    color: white;
+}
