--- a/Frontend/src/Stylesheets/ExploreCourses.module.css
+++ b/Frontend/src/Stylesheets/ExploreCourses.module.css
@@ -3,6 +3,8 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    /* position: absolute;
+    bottom: 0px; */
 }
 
 .title {
