created navbar and creted central store using redux

--- a/Frontend/src/Stylesheets/CourseCards.module.css
+++ b/Frontend/src/Stylesheets/CourseCards.module.css
@@ -31,11 +31,11 @@
 }
 
 .card b , p {
-    padding: 10px;
+    padding: 10px 15px;
 }
 
 .card b {
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .card p {
