--- a/Frontend/src/Stylesheets/About.module.css
+++ b/Frontend/src/Stylesheets/About.module.css
@@ -169,6 +169,48 @@
 
 }
 
+.stats {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    /* border: 2px solid red; */
+    background-color: #2C333F;
+    width: 100%;
+}
 
+.statCard {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: 5rem;
+}
 
+.statCard p {
+    margin: 0;
+    padding: 0;
+}
+.statCard .number {
+    font-size: 1.5rem;
+    color: #F1F2FF;
+}
+.statCard .title {
+    font-size: 1rem;
+    color: #c1c5ce;
+}
 
+.section3 {
+    margin: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.section4 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    /* border: 2px solid red; */
+}
