--- a/Frontend/src/Stylesheets/ProfileDropDown.module.css
+++ b/Frontend/src/Stylesheets/ProfileDropDown.module.css
@@ -70,6 +70,10 @@
     box-sizing: border-box;
 }
 
+.profileContainer a {
+    width: 100%;
+}
+
 .profileContainer p:hover {
     background-color: #3b414c;
     color: #ECF5FF;
