--- a/Frontend/src/Stylesheets/MyProfile.module.css
+++ b/Frontend/src/Stylesheets/MyProfile.module.css
@@ -4,10 +4,12 @@
     align-items: flex-start;
     flex-direction: column;
     /* border: 2px solid red; */
-    height: 100vh;
-    width: 85vw;
+    min-height: 100vh;
+    width: 80vw;
     /* margin: 1rem 0px; */
+    margin-top: 8vh;
     padding: 0.5rem 0px;
+    overflow-x: hidden;
 }
 
 .title {
@@ -62,7 +64,14 @@
 }
 
 .section2 .title {
-    font-size: larger;
+    font-size: 1.5rem;
+    margin: 0px;
+    /* border: 2px solid red; */
+}
+.section3 .title {
+    font-size: 1.5rem;
+    margin: 0px;
+    /* border: 2px solid red; */
 }
 
 .section2 .desc {
