--- a/Frontend/src/Stylesheets/SideLink.module.css
+++ b/Frontend/src/Stylesheets/SideLink.module.css
@@ -3,9 +3,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    /* border: 2px solid red; */
 }
-
-
 
 .link {
     background-color: #161D29;
@@ -18,6 +17,7 @@
     gap: 10px;
     padding: 10px;
     border-left: 2px solid #161D29;
+
 }
 
 /* .link:hover {
@@ -28,6 +28,8 @@
 .active {
     background-color: #3D2A01;
     border-left: 2px solid #FFD60A;
+    width: 100%;
+
 }
 
 .text {
