--- a/Frontend/src/Stylesheets/Sidebar.module.css
+++ b/Frontend/src/Stylesheets/Sidebar.module.css
@@ -1,4 +1,6 @@
 .container {
+    position: fixed;
+    top: 8vh;
     display: flex;
     justify-content: flex-start;
     align-items: flex-start;
@@ -27,4 +29,9 @@
     justify-content: center;
     align-items: center;
     border-left: 2px solid #161D29;
+}
+
+.sidebarSection2 {
+    /* border: 2px solid red; */
+    width: 100%;
 }
