--- a/Frontend/src/Stylesheets/dashboard.module.css
+++ b/Frontend/src/Stylesheets/dashboard.module.css
@@ -3,3 +3,16 @@
     justify-content: flex-start;
     align-items: flex-start;
 }
+
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 200px;
+    flex-grow: 1;
+    padding: 20px;
+    /* overflow-y: auto; */
+    margin-top: vh;
+    min-height: 100vh;
+    /* overflow-x: hidden; */
+}
