--- a/Frontend/src/Stylesheets/createCourse.module.css
+++ b/Frontend/src/Stylesheets/createCourse.module.css
@@ -1,5 +1,4 @@
 .container {
-    /* border : 2px solid red; */
     width: 100%;
     height: auto;
     display: flex;
@@ -7,7 +6,6 @@
     align-items: start;
     margin:0px 10px;
     margin-top: 8vh;
-
 }
 
 
@@ -44,7 +42,8 @@
     margin: 20px auto;
     padding: 10px 0;
     width: 100%;
-    max-width: 800px; /* Adjust max-width as needed */
+    max-width: 800px; 
+    z-index: -1;/* Adjust max-width as needed */
   }
   
   /* Step Container */
